# design_patterns_final_project_team_void

./: .gitignore  README.md  bitcoin_wallet.db  db.txt  main.py  pyproject.toml
api/: statistics_router.py  transaction_router.py  user_router.py  wallet_router.py  wallet_transaction_router.py
database/: database_init.py  session.py
dependencies/: transaction_dependencies.py  user_dependencies.py  wallet_dependencies.py
dto/: basic_wallet_response_dto.py  statistics_response_dto.py  transaction_create_dto.py  transaction_response_dto.py  user_create_dto.py  user_response_dto.py  wallet_response_dto.py
entity/: transaction.py  user.py  wallet.py
exception/: exceptions.py  global_exception_handler.py
repository/: transaction_repository.py  user_repository.py  wallet_repository.py
service/: btc_price_converter.py  transaction_service.py  user_service.py  wallet_service.py
tests/: conftest.py
tests/api/: test_transaction_api.py  test_transaction_api_exceptions.py  test_user_api.py  test_wallet_api.py
tests/integration/: test_transaction_repository.py  test_users.py  test_wallet_repository_integration.py  test_wallets.py
tests/unit/: test_btc_price_converter.py  test_transaction_service.py  test_wallet_service.py
